k8s/streamlit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
  namespace: kid-mind
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
        - name: streamlit
          image: europe-north1-docker.pkg.dev/alteronic-ai/kid-mind/kid-mind:latest
          ports:
            - containerPort: 8501
          resources:
            requests:
              cpu: "2"
              memory: 4Gi
            limits:
              cpu: "2"
              memory: 4Gi
          livenessProbe:
            httpGet:
              path: /
              port: 8501
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8501
            initialDelaySeconds: 30
            periodSeconds: 10
