k8s/streamlit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit
  namespace: kid-mind
spec:
  type: ClusterIP
  selector:
    app: streamlit
  ports:
    - port: 8501
      targetPort: 8501
